<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thomashardern.trtstriage.trtstriage.MainActivity">

    <TextView
        android:id="@+id/eyeOpeningLabel"
        android:layout_width="105dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/eye_opening"
        app:layout_constraintEnd_toStartOf="@+id/eyeOpeningSeekBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/eyeOpeningSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="225dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintEnd_toStartOf="@+id/eyeOpeningCurrentValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verbalResponseLabel"
        android:layout_width="105dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/verbal_response"
        app:layout_constraintEnd_toStartOf="@+id/verbalResponseSeekBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eyeOpeningLabel" />

    <SeekBar
        android:id="@+id/verbalResponseSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="225dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:max="4"
        android:progress="1"
        app:layout_constraintEnd_toStartOf="@+id/verbalResponseCurrentValue"
        app:layout_constraintTop_toBottomOf="@+id/eyeOpeningSeekBar" />

    <TextView
        android:id="@+id/motorResponseLabel"
        android:layout_width="105dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/motor_response"
        app:layout_constraintEnd_toStartOf="@+id/motorResponseSeekBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verbalResponseLabel" />

    <SeekBar
        android:id="@+id/motorResponseSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="225dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:max="5"
        android:progress="1"
        app:layout_constraintEnd_toStartOf="@+id/motorResponseCurrentValue"
        app:layout_constraintTop_toBottomOf="@+id/verbalResponseSeekBar" />

    <TextView
        android:id="@+id/respRateLabel"
        android:layout_width="105dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/respiratory_rate"
        app:layout_constraintEnd_toStartOf="@+id/respRateNumberPicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motorResponseLabel" />

    <NumberPicker
        android:id="@+id/respRateNumberPicker"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motorResponseSeekBar" />

    <TextView
        android:id="@+id/systolicBPLabel"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/systolic_bp"
        app:layout_constraintEnd_toStartOf="@+id/systolicBPNumberPicker"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/respRateNumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/motorResponseSeekBar" />

    <NumberPicker
        android:id="@+id/systolicBPNumberPicker"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motorResponseSeekBar" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="365dp"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/feedbackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respRateNumberPicker" />

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/feedback_form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/eyeOpeningCurrentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verbalResponseCurrentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eyeOpeningCurrentValue" />

    <TextView
        android:id="@+id/motorResponseCurrentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verbalResponseCurrentValue" />

</android.support.constraint.ConstraintLayout>
